@@ -9,6 +9,9 @@ $outfile = tempnam(sys_get_temp_dir(), "cms_enc_basic");
 if ($outfile === false)
     die("failed to get a temporary filename!");
 $outfile2 = $outfile . ".out";
+$outfile3 = tempnam(sys_get_temp_dir(), "cms_enc_basic");
+if ($outfile3 === false)
+    die("failed to get a temporary filename!");
 $single_cert = "file://" . __DIR__ . "/cert.crt";
 $privkey = "file://" . __DIR__ . "/private_rsa_1024.key";
 $wrongkey = "file://" . __DIR__ . "/private_rsa_2048.key";
@@ -33,6 +36,7 @@ var_dump(openssl_cms_encrypt($infile, $outfile, $wrong, $headers, cipher_algo: $
 var_dump(openssl_cms_encrypt($infile, $outfile, $empty, $headers, cipher_algo: $cipher));
 var_dump(openssl_cms_encrypt($infile, $outfile, $multi_certs, $headers, cipher_algo: $cipher));
 var_dump(openssl_cms_encrypt($infile, $outfile, array_map('openssl_x509_read', $multi_certs), $headers, cipher_algo: $cipher));
+var_dump(openssl_cms_encrypt($infile, $outfile3, $single_cert, $headers, flags: OPENSSL_CMS_OLDMIMETYPE, cipher_algo: $cipher));
 
 if (file_exists($outfile)) {
     echo "true\n";
@@ -41,6 +45,15 @@ if (file_exists($outfile)) {
 if (file_exists($outfile2)) {
     echo "true\n";
     unlink($outfile2);
+}
+
+if (file_exists($outfile3)) {
+    $content = file_get_contents($outfile3, false, null, 0, 256);
+    if (str_contains($content, 'Content-Type: application/x-pkcs7-mime; smime-type=enveloped-data; name="smime.p7m"')) {
+        echo "true\n";
+    }
+    unset($content); 
+    unlink($outfile3);
 }
 ?>
 --EXPECT--
@@ -57,5 +70,7 @@ bool(false)
 bool(false)
 bool(true)
 bool(true)
+bool(true)
+true
 true
 true
